--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,11 @@ h1{
     color: var(--light-text);
 }
 
+body{
+    height: 100svh;
+    overflow: hidden;
+}
+
 .removed{
     display: none;
 }
@@ -31,13 +36,14 @@ h1{
     width: 100%;
     font-weight: 600;
     line-height: 2.4rem;
-    font-size: 2.4rem;
+    font-size: 2rem;
     cursor: pointer;
 }
 
 .main-wrapper{
     padding: 2.8rem 2.4rem 3.1rem;
-    height: 100vh;
+    height: 100svh;
+    overflow: hidden;
     background-image: url("../assets/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
