--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -5,13 +5,15 @@ html{
 body{
     font-size: 1.6rem;
 }
-
+#webpack-dev-server-client-overlay{
+    display: none;
+}
 :root{
     --select-transition: .15s ease-in;
 
     --roboto-ff: 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
     --sf-pro-display-ff: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-    --general-ff: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Roboto', sans-serif;
+    --general-ff: -apple-system, BlinkMacSystemFont, 'SF Pro Display', sans-serif;
 
     --btn-height: 5.6rem;
     --btn-radius: 2.4rem;
@@ -21,4 +23,7 @@ body{
     --dark-text: #070B33;
     --light-text: #FFFFFF;
     --semi-light-text: #FFFFFF80;
+
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color: transparent;
 }
