--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
     font-family: 'SF Pro Display';
     font-style: normal;
     font-weight: 400;
-        src: url("../assets/fonts/SF-Pro-Display/SF-Pro-Display-Regular.otf") format("opentype");;
+    src: url("../assets/fonts/SF-Pro-Display/SF-Pro-Display-Regular.otf") format("opentype");;
 }
 
 @font-face {
@@ -15,23 +15,11 @@
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 400;
-    src: url("../assets/fonts/Roboto/Roboto-Regular.ttf") format("opentype");;
-}
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 600;
-    src: url("../assets/fonts/Roboto/Roboto-Medium.ttf") format("opentype");;
-}
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
     font-weight: 700;
     src: url("../assets/fonts/Roboto/Roboto-Bold.ttf") format("opentype");;
 }
-h1{
+
+h1 {
     font-size: var(--h1-fsize);
     line-height: var(--h1-line-height);
     text-align: center;
@@ -39,31 +27,31 @@ h1{
     font-weight: 900;
 }
 
-body{
+body {
     height: 100svh;
     overflow: hidden;
     font-family: var(--general-ff);
 }
 
-.close{
+.close {
     display: flex;
 }
 
-.removed{
+.removed {
     display: none;
 }
 
-.title{
+.title {
     margin-top: auto;
 }
 
-.main-wrapper__top{
+.main-wrapper__top {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.button{
+.button {
     min-height: var(--btn-height);
     border-radius: var(--btn-radius);
     outline: none;
@@ -80,7 +68,7 @@ body{
     color: var(--dark-text)
 }
 
-.main-wrapper{
+.main-wrapper {
     padding: 2.8rem 2.4rem 3.1rem;
     height: 100svh;
     overflow: hidden;
@@ -88,7 +76,7 @@ body{
     grid-template-rows: 1fr auto 1fr auto;
 }
 
-.main-wrapper__bg{
+.main-wrapper__bg {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -98,26 +86,27 @@ body{
     z-index: -1;
 }
 
-.main-wrapper__bg__img{
+.main-wrapper__bg__img {
     width: 100%;
     display: block;
     position: relative;
     z-index: 1;
 }
-.gallery{
+
+.gallery {
     margin: 4rem 0 5rem;
     display: flex;
     justify-content: space-between;
     gap: .7rem;
 }
 
-.gallery-item{
+.gallery-item {
     max-width: 10.4rem;
     position: relative;
     z-index: 1;
 }
 
-.gallery-item__text{
+.gallery-item__text {
     position: absolute;
     z-index: 2;
     color: var(--light-text);
@@ -128,20 +117,20 @@ body{
     line-height: 1.3rem;
 }
 
-.access{
+.access {
     gap: .8rem;
     display: flex;
     flex-direction: column;
 }
 
-.access .button{
+.access .button {
     margin-top: .8rem;
 }
 
-.access-item{
+.access-item {
     cursor: pointer;
     min-height: var(--btn-height);
-    border: 1px solid var(--light-text);
+    border: 1px solid transparent;
     background-color: #FFFFFF1A;
     border-radius: var(--btn-radius);
     display: flex;
@@ -153,16 +142,17 @@ body{
     color: var(--light-text);
     font-size: 1.6rem;
     line-height: 1.9rem;
-    transition: background-color var(--select-transition);
+    transition: all  var(--select-transition);
     font-family: var(--sf-pro-display-ff);
 }
 
-input:checked+.access-item{
+input:checked + .access-item {
     background-color: #FFFFFF4D;
+    border-color: var(--light-text);
 }
 
-.access-item__tip{
-    padding: .2rem  2.2rem;
+.access-item__tip {
+    padding: .2rem 2.2rem;
     text-transform: uppercase;
     font-weight: 700;
     color: var(--dark-text);
@@ -178,7 +168,7 @@ input:checked+.access-item{
     font-family: var(--roboto-ff);
 }
 
-.access-item__title{
+.access-item__title {
     text-transform: uppercase;
     font-weight: 600;
 }
@@ -188,7 +178,7 @@ input:checked+.access-item{
     font-weight: 400;
 }
 
-.terms{
+.terms {
     display: flex;
     width: 100%;
     max-width: 26rem;
@@ -205,26 +195,29 @@ input:checked+.access-item{
     text-decoration: none;
 }
 
-.close{
+.close {
     display: inline;
 }
 
-.close svg{
+.close svg {
     height: 1.2rem;
     width: 1.2rem;
 }
 
-@media (max-height  : 737px) {
-    .access .button{
+@media (max-height: 737px) {
+    .access .button {
         margin-top: 0;
     }
-    .main-wrapper{
+
+    .main-wrapper {
         padding: 1.6rem 2.4rem 1rem;
     }
-    .terms{
+
+    .terms {
         margin-top: 2.8rem;
     }
-    .gallery{
+
+    .gallery {
         margin: 4rem 0;
     }
 }
