--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -13,7 +13,7 @@ body{
 
     --roboto-ff: 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
     --sf-pro-display-ff: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-    --general-ff: -apple-system, BlinkMacSystemFont, 'SF Pro Display', sans-serif;
+    --general-ff: 'Open Sans', -apple-system, BlinkMacSystemFont, 'SF Pro Display', sans-serif;
 
     --btn-height: 5.6rem;
     --btn-radius: 2.4rem;
@@ -23,7 +23,4 @@ body{
     --dark-text: #070B33;
     --light-text: #FFFFFF;
     --semi-light-text: #FFFFFF80;
-
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-    -webkit-tap-highlight-color: transparent;
 }
