--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -13,6 +13,8 @@
   -webkit-font-smoothing: antialiased;
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 ul[class],
