--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,21 @@ h1 {
   }
 }
 
+a {
+  svg path{
+    transition: all var(--select-transition);
+  }
+  transition: color var(--select-transition);
+  &:active{
+    svg{
+      path{
+        fill: #fff!important;
+      }
+    }
+    color: #fff!important;
+  }
+}
+
 body {
   height: 100vh;
   height: 100svh;
@@ -54,7 +69,12 @@ body {
   line-height: 2.4rem;
   font-size: 2rem;
   cursor: pointer;
-  color: var(--dark-text)
+  color: var(--dark-text);
+  transition: transform var(--select-transition);
+
+  &:active{
+    transform: scale(.96);
+  }
 }
 
 .main-wrapper {
@@ -66,23 +86,23 @@ body {
   grid-template-rows: 1fr auto 1fr auto;
   max-width: 60rem;
   margin: auto;
-}
 
-.main-wrapper__bg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: #0d081a;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
+  &__bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #0d081a;
+    top: 0;
+    left: 0;
+    z-index: -1;
 
-.main-wrapper__bg__img {
-  width: 100%;
-  display: block;
-  position: relative;
-  z-index: 1;
+    &__img {
+      width: 100%;
+      display: block;
+      position: relative;
+      z-index: 1;
+    }
+  }
 }
 
 .gallery {
@@ -90,23 +110,22 @@ body {
   display: flex;
   justify-content: space-between;
   gap: .7rem;
-}
+  &-item {
+    max-width: 10.4rem;
+    position: relative;
+    z-index: 1;
 
-.gallery-item {
-  max-width: 10.4rem;
-  position: relative;
-  z-index: 1;
-}
-
-.gallery-item__text {
-  position: absolute;
-  z-index: 2;
-  color: var(--light-text);
-  opacity: .7;
-  bottom: 1rem;
-  left: .7rem;
-  font-size: 1.1rem;
-  line-height: 1.3rem;
+    &__text {
+      position: absolute;
+      z-index: 2;
+      color: var(--light-text);
+      opacity: .7;
+      bottom: 1rem;
+      left: .7rem;
+      font-size: 1.1rem;
+      line-height: 1.3rem;
+    }
+  }
 }
 
 .access {
